--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -142,7 +142,7 @@
             <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
-            <script src="{{=URL('static','js/jquery-ui.min.js')}}"></script>
+            <script async defer src="{{=URL('static','js/jquery-ui.min.js')}}"></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
             {{ pass }}
