--- a/views/default/board.html
+++ b/views/default/board.html
@@ -51,98 +51,102 @@
     </div>
 </div>
 
-
+{{definition_ids =[]}}
 {{if "stories" in globals():}}
     {{for story in stories:}}
         {{if story.sprint_id == sprint.id: }}
-        <table class="table" data-storyid='{{=story.id}}'>
-            <tr>
-                <th class="story_title" colspan=5>
-                    <h5>{{=story.title}}</h5>
-                </th>
-            </tr>
-            <tr>
             {{count = 0}}
             {{for df in definition_ready[story.id]:}}
                 {{if definition_ready[story.id][count].story_id == story.id:}}
-                <td class="definition_ready_title">
-                    {{=definition_ready[story.id][count].title}}
-                    {{print definition_ready[story.id][count].story_id}}
-                </td>
-                
-                <td class="column_task" data-status="todo">
-                    {{for task in tasks[definition_ready[story.id][count].id]:}}
-                        {{if task["status"] == "todo": }}
-                        <ul class="task_container" data-taskid='{{=task["id"]}}'>
-                          <li class="task">
-                            <a href="#" class="content">{{=task["title"]}}</a>
-                            <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
-                            <div class="clearfix"></div>
-                            <div>
-                                <span class="icon-comment"></span>
-                            </div>
-                          </li>
-                        </ul>
-                        {{pass}}
-                    {{pass}}
-                </td>
-                
-                <td class="column_task" data-status="inprogress">
-                    {{for task in tasks[definition_ready[story.id][count].id]:}}
-                        {{if task["status"] == "inprogress": }}
-                        <ul class="task_container" data-taskid='{{=task["id"]}}'>
-                          <li class="task">
-                            <a href="#">{{=task["title"]}}</a>
-                            <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
-                            <div class="clearfix"></div>
-                            <div>
-                                <span class="icon-comment"></span>
-                            </div>
-                          </li>
-                        </ul>
-                        {{pass}}
-                    {{pass}}
-                </td>
-                
-                <td class="column_task" data-status="verification">
-                    {{for task in tasks[definition_ready[story.id][count].id]:}}
-                        {{if task["status"] == "verification": }}
-                        <ul class="task_container" data-taskid='{{=task["id"]}}'>
-                          <li class="task">
-                            <a href="#">{{=task["title"]}}</a>
-                            <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
-                            <div class="clearfix"></div>
-                            <div>
-                                <span class="icon-comment"></span>
-                            </div>
-                          </li>
-                        </ul>
-                        {{pass}}
-                    {{pass}}
-                </td>
-                
-                <td class="column_task" data-status="done">
-                    {{for task in tasks[definition_ready[story.id][count].id]:}}
-                        {{if task["status"] == "done": }}
-                        <ul class="task_container" data-taskid='{{=task["id"]}}'>
-                          <li class="task">
-                            <a href="#">{{=task["title"]}}</a>
-                            <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
-                            <div class="clearfix"></div>
-                            <div>
-                                <span class="icon-comment"></span>
-                            </div>
-                          </li>
-                        </ul>
-                        {{pass}}
-                    {{pass}}
-                </td>
-
+                {{if not definition_ready[story.id][count].story_id in definition_ids:}}
+                <table class="table" data-storyid='{{=definition_ready[story.id][count].id}}'>
+                    <tr>
+                        <th class="story_title" colspan=5>
+                            <h5>{{=story.title}}</h5>
+                        </th>
+                    </tr>
+                    {{definition_ids.append(definition_ready[story.id][count].story_id)}}
+                {{else:}}
+                <table class="table no-th" data-storyid='{{=definition_ready[story.id][count].id}}'>
                 {{pass}}
-                {{count += 1}}
-            {{pass}}
-            </tr>
-        </table>
+                    <tr>
+                        <td class="definition_ready_title">
+                            {{=definition_ready[story.id][count].title}}
+                        </td>
+                        
+                        <td class="column_task" data-status="todo">
+                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                {{if task["status"] == "todo": }}
+                                <ul class="task_container" data-taskid='{{=task["id"]}}'>
+                                  <li class="task">
+                                    <a href="#" class="content">{{=task["title"]}}</a>
+                                    <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
+                                    <div class="clearfix"></div>
+                                    <div>
+                                        <span class="icon-comment"></span>
+                                    </div>
+                                  </li>
+                                </ul>
+                                {{pass}}
+                            {{pass}}
+                        </td>
+                        
+                        <td class="column_task" data-status="inprogress">
+                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                {{if task["status"] == "inprogress": }}
+                                <ul class="task_container" data-taskid='{{=task["id"]}}'>
+                                  <li class="task">
+                                    <a href="#">{{=task["title"]}}</a>
+                                    <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
+                                    <div class="clearfix"></div>
+                                    <div>
+                                        <span class="icon-comment"></span>
+                                    </div>
+                                  </li>
+                                </ul>
+                                {{pass}}
+                            {{pass}}
+                        </td>
+                        
+                        <td class="column_task" data-status="verification">
+                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                {{if task["status"] == "verification": }}
+                                <ul class="task_container" data-taskid='{{=task["id"]}}'>
+                                  <li class="task">
+                                    <a href="#">{{=task["title"]}}</a>
+                                    <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
+                                    <div class="clearfix"></div>
+                                    <div>
+                                        <span class="icon-comment"></span>
+                                    </div>
+                                  </li>
+                                </ul>
+                                {{pass}}
+                            {{pass}}
+                        </td>
+                        
+                        <td class="column_task" data-status="done">
+                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                {{if task["status"] == "done": }}
+                                <ul class="task_container" data-taskid='{{=task["id"]}}'>
+                                  <li class="task">
+                                    <a href="#">{{=task["title"]}}</a>
+                                    <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
+                                    <div class="clearfix"></div>
+                                    <div>
+                                        <span class="icon-comment"></span>
+                                    </div>
+                                  </li>
+                                </ul>
+                                {{pass}}
+                            {{pass}}
+                        </td>
+
+                        {{count += 1}}
+                        {{pass}}
+                    {{pass}}
+                </tr>
+            </table>
         {{pass}}
     {{pass}}
 {{pass}}
