--- a/views/default/board.html
+++ b/views/default/board.html
@@ -3,8 +3,18 @@
 <script>
     // OBS: other global variables are generated on the page project
     var url = {
+        createUpdateBacklogItens : '{{=URL("create_update_backlog_itens.json")}}',
         changeAjaxItens : '{{=URL("board_ajax_itens")}}',
-    };
+    },
+    msg = {
+        field_empty : '{{=T("Click to write")}}',
+        validation_error : '{{=T("Can not be empty")}}',
+        confirm : '{{=T("Are you sure you want to continue?")}}',
+        remove_sucess : '{{=T("Removed Successfully!")}}',
+        remove_error : '{{=T("Error in removal!")}}',
+        type_error : 'error',
+        type_success : 'success',
+    }
 </script>
 
 <div id="target_ajax"></div>
@@ -19,17 +29,37 @@
         <div id="header-name" class="pull-left">
             <h1>{{=project.name}}</h1>
         </div>
-        <div id="project_info" class="pull-left">
-            <p>{{=project.description}}</p>
-            <p>{{=project.date_.strftime("%d/%m/%Y")}} <a href="{{=project.url}}" target="_blank">{{=project.url}}</a></p>
-        </div>
-        <div id="live_search" class="pull-right">
-                <p>
-                    <input type="text" name="livesearch" placeholder='{{=T("Search on Sprint")}}' alt='{{=T("Search on Sprint")}}' title='{{=T("Search on Sprint")}}'>
-
-                <p id="nothingfound">{{=T("No name match your search!")}}</p>
-        </div>
         <div class="clearfix"></div>
+    </div>
+</div>
+
+<div id="info_content" class="row-fluid">
+    <div id="project_info" class="span4">
+        <p>{{=project.description}}</p>
+        <p>{{=project.date_.strftime("%d/%m/%Y")}} <a href="{{=project.url}}" target="_blank">{{=project.url}}</a></p>
+    </div>
+    <div id="time_sprint" class="span4">
+        <div id="clock">
+            <i class="icon-time pull-left"></i>
+            <div class="pull-left">
+                {{if sprint.started:}}
+                <p>{{=T('Started in')}}: <strong>{{=g_blank_check(sprint.started.strftime("%d/%m/%Y"))}}</strong></p>
+                {{else:}}
+                <p>{{=T('Started in')}}: <strong>00/00/00</strong></p>
+                {{pass}}
+
+                {{if sprint.ended:}}
+                <p>{{=T('Estimated for')}}: <strong>{{=g_blank_check(sprint.ended.strftime("%d/%m/%Y"))}}</strong></p>
+                {{else:}}
+                <p>{{=T('Estimated for')}}: <strong>00/00/00</strong></p>
+                {{pass}}
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <div id="live_search" class="span3">
+        <input type="text" name="livesearch" placeholder='{{=T("Search on Sprint")}}' alt='{{=T("Search on Sprint")}}' title='{{=T("Search on Sprint")}}'>
+        <p id="nothingfound">{{=T("No name match your search!")}}</p>
     </div>
 </div>
 
@@ -62,7 +92,7 @@
                 <table class="table" data-storyid='{{=definition_ready[story.id][count].id}}'>
                     <tr>
                         <th class="story_title" colspan=5>
-                            <h5>{{=story.title}}</h5>
+                            <h5><a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a></h5>
                         </th>
                     </tr>
                     {{definition_ids.append(definition_ready[story.id][count].story_id)}}
@@ -79,7 +109,7 @@
                                 {{if task["status"] == "todo": }}
                                 <ul class="task_container" data-taskid='{{=task["id"]}}'>
                                   <li class="task">
-                                    <a href="#" class="content">{{=task["title"]}}</a>
+                                    <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                     <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
                                     <div class="clearfix"></div>
                                     <div>
@@ -96,7 +126,7 @@
                                 {{if task["status"] == "inprogress": }}
                                 <ul class="task_container" data-taskid='{{=task["id"]}}'>
                                   <li class="task">
-                                    <a href="#">{{=task["title"]}}</a>
+                                    <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                     <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
                                     <div class="clearfix"></div>
                                     <div>
@@ -113,7 +143,7 @@
                                 {{if task["status"] == "verification": }}
                                 <ul class="task_container" data-taskid='{{=task["id"]}}'>
                                   <li class="task">
-                                    <a href="#">{{=task["title"]}}</a>
+                                    <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                     <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
                                     <div class="clearfix"></div>
                                     <div>
@@ -130,7 +160,7 @@
                                 {{if task["status"] == "done": }}
                                 <ul class="task_container" data-taskid='{{=task["id"]}}'>
                                   <li class="task">
-                                    <a href="#">{{=task["title"]}}</a>
+                                    <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                     <img src='{{=Gravatar(auth.user.email).thumb}}' width="30px" height="30px">
                                     <div class="clearfix"></div>
                                     <div>
