--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -47,6 +47,7 @@
         {{ if request.function == "product_backlog": }}
         <link rel="stylesheet" href='{{=URL("static","css/product_backlog.css")}}' />
         {{ elif request.function == "board": }}
+        <link rel="stylesheet" href='{{=URL("static","css/datepicker.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/board.css")}}' />
         {{pass}}
         
@@ -100,7 +101,7 @@
                         <li><a href="#" class="tip-right" alt="{{=T('Archives')}}" title="{{=T('Archives')}}"><i class="icon-file"></i> <span>{{=T('Archives')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Team')}}" title="{{=T('Team')}}"><i class="icon-group"></i> <span>{{=T('Team')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Invite')}}" title="{{=T('Invite')}}"><i class="icon-child"></i> <span>{{=T('Invite')}}</span></a></li>
-                        <li><a href="#" class="tip-right" alt="{{=T('Metrics')}}" title="{{=T('Metrics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
+                        <li><a href="#" class="tip-right" alt="{{=T('Statistics')}}" title="{{=T('Statistics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Contacts')}}" title="{{=T('Contacts')}}"><i class="icon-address-book"></i> <span>{{=T('Contacts')}}</span></a></li>
                     {{pass}}
                     <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class='{{=g_if_in_current_page("default/board/%s" %request.args(0),"icon-chevron-right", "icon-chevron-left")}} icon-white'></i> <span>{{=T('Collapse Menu')}}</span></button></li>
@@ -144,6 +145,7 @@
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
+            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
             {{ pass }}
 
