--- a/views/default/board.html
+++ b/views/default/board.html
@@ -14,6 +14,11 @@
         remove_error : '{{=T("Error in removal!")}}',
         type_error : 'error',
         type_success : 'success',
+    },
+    date = {
+        // sprint_started : '{{=g_blank_date_check(sprint.started)}}',
+        sprint_started : '{{=sprint.started}}',
+        weeks : '{{=sprint.weeks}}',
     }
 </script>
 
@@ -42,17 +47,8 @@
         <div id="clock">
             <i class="icon-time pull-left"></i>
             <div class="pull-left">
-                {{if sprint.started:}}
-                <p>{{=T('Started in')}}: <strong>{{=g_blank_check(sprint.started.strftime("%d/%m/%Y"))}}</strong></p>
-                {{else:}}
-                <p>{{=T('Started in')}}: <strong>00/00/00</strong></p>
-                {{pass}}
-
-                {{if sprint.ended:}}
-                <p>{{=T('Estimated for')}}: <strong>{{=g_blank_check(sprint.ended.strftime("%d/%m/%Y"))}}</strong></p>
-                {{else:}}
-                <p>{{=T('Estimated for')}}: <strong>00/00/00</strong></p>
-                {{pass}}
+                <p>{{=T('Started in')}}: <strong>{{=g_blank_date_check(sprint.started)}}</strong></p>
+                <p>{{=T('Estimated for')}}: <strong>{{=g_blank_date_check(sprint.ended)}}</strong></p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -114,6 +110,10 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                          <span class="add-on"><i class="icon-calendar"></i></span>
+                                        </div>
                                     </div>
                                   </li>
                                 </ul>
@@ -131,6 +131,10 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                          <span class="add-on"><i class="icon-calendar"></i></span>
+                                        </div>
                                     </div>
                                   </li>
                                 </ul>
@@ -148,6 +152,10 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                          <span class="add-on"><i class="icon-calendar"></i></span>
+                                        </div>
                                     </div>
                                   </li>
                                 </ul>
@@ -165,6 +173,10 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                          <span class="add-on"><i class="icon-calendar"></i></span>
+                                        </div>
                                     </div>
                                   </li>
                                 </ul>
