save the started date of cards

--- a/views/default/board.html
+++ b/views/default/board.html
@@ -10,6 +10,7 @@
         field_empty : '{{=T("Click to write")}}',
         validation_error : '{{=T("Can not be empty")}}',
         confirm : '{{=T("Are you sure you want to continue?")}}',
+        task_undated : '{{=T("You must first put a start date")}}',
         remove_sucess : '{{=T("Removed Successfully!")}}',
         remove_error : '{{=T("Error in removal!")}}',
         type_error : 'error',
