retouching in datepicker

--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -145,7 +145,7 @@
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
-            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}" charset="UTF-8"></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
             {{ pass }}
 
