--- a/views/default/board.html
+++ b/views/default/board.html
@@ -111,8 +111,8 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
-                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
-                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}'>
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' readonly>
                                           <span class="add-on"><i class="icon-calendar"></i></span>
                                         </div>
                                     </div>
@@ -132,8 +132,8 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
-                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
-                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}'>
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' readonly>
                                           <span class="add-on"><i class="icon-calendar"></i></span>
                                         </div>
                                     </div>
@@ -153,8 +153,8 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
-                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
-                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}'>
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' readonly>
                                           <span class="add-on"><i class="icon-calendar"></i></span>
                                         </div>
                                     </div>
@@ -174,8 +174,8 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <span class="icon-comment"></span>
-                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}' data-date-format="dd/mm/yyyy">
-                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' disabled=>
+                                        <div class="input-append date started_time" data-date='{{=g_blank_date_check(task["started"])}}'>
+                                          <input size="16" type="text" value='{{=g_blank_date_check(task["started"])}}' readonly>
                                           <span class="add-on"><i class="icon-calendar"></i></span>
                                         </div>
                                     </div>
