--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -134,21 +134,23 @@
         </div>
 
 
-            <script src='{{=URL("static","js/jquery.min.js")}}'></script>
-            <script src="{{=URL('static','js/jquery-ui.min.js')}}"></script>
+            <script src='{{=URL("static","js/jquery-1.9.1.min.js")}}'></script>
+            <script src="{{=URL('static','js/jquery-ui-1.10.2.custom.min.js')}}"></script>
             <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
-            <script async defer src='{{=URL("static","js/web2py.js")}}'></script>
-            <script async defer src='{{=URL("static","js/base.js")}}'></script>
-            <script src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
+            {{ if request.function == "product_backlog" or request.function == "board": }}
+            <script async defer src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
+            <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
+            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+            {{ pass }}
             {{ if request.function == "product_backlog": }}
             <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
-            <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
-            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}" charset="UTF-8"></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
             {{ pass }}
 
+            <script async defer src='{{=URL("static","js/web2py.js")}}'></script>
+            <script async defer src='{{=URL("static","js/base.js")}}'></script>
             <!--[if lte IE 7]><script src='{{=URL("static","js/lte-ie7.js")}}'>></script><![endif]-->
     </body>
 </html>
