--- a/static/css/product_backlog.css
+++ b/static/css/product_backlog.css
@@ -138,6 +138,12 @@ margin-top: 0px;
     background-image: linear-gradient(to bottom, #dadada, #b1b1b1);
     -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
+    cursor: pointer;
+}
+
+
+.story_header:active {
+    cursor: move;
 }
 
 .buttons_container {
