--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -31,10 +31,10 @@
         {{=form.custom.end}}
         </div>
         <div class="span5">
-            {{if "all_projects" in globals():}}
-                <h3>{{=T('My Projects')}} <span class="label">{{=len(all_projects)}}</span></a></h3>
+            {{if "person_projects" in globals():}}
+                <h3>{{=T('My Projects')}} <span class="label">{{=len(person_projects)}}</span></a></h3>
                 <ul>
-                {{for i in all_projects:}}
+                {{for i in person_projects:}}
                     <li class='{{=g_current_page("default/product_backlog/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a></li>
                 {{pass}}
                 </ul>
